# mvscript

./: .gitignore  CHANGELOG.md  README.md  cabal.project.freeze  config.toml  create_tests.sh  fourmolu.yaml  hie.yaml  install.sh  mvscript.cabal  package.yaml  requirements.txt  run_tests.py  test.mvs
.github/workflows/: haskell.yml  lint.yml  stack.yml
app/: Main.hs  Misc.hs  Parser.hs  TypeCheck.hs  Types.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: Config.hs  ConfigParser.hs  ConfigTypes.hs  Context.hs  Debug.hs  Error.hs  Eval.hs  FunctionStorage.hs  Misc.hs  Parser.hs  PrettyPrint.hs  TypeCheck.hs  Types.hs  VariableStorage.hs
lib/Config/: ConfigHandler.hs  ConfigParser.hs  ConfigTypes.hs  ConfigValidator.hs
test/: ParserSpec.hs  test01.in  test01.myout  test01.out  test_assign_op.in  test_assign_op.out  test_assign_simple.myout  test_block.in  test_block.myout  test_block.out  test_collapse_cf_else.in  test_collapse_float_cf.in  test_collapse_int_cf.in  test_func_empty.myout  test_if_else_simple.in  test_if_simple.out  test_lambda_apply.in  test_lambda_apply.out  test_lambda_args.in  test_lambda_args.myout  test_lambda_with_func_call.in
test/compile_tests/: test_api_type_init.mvs  test_assign_op.mvs  test_assign_simple.mvs  test_correct_return_type_on_assign.mvs  test_correct_return_type_on_init_variable.mvs  test_empty_lambda_typename.mvs  test_func_arg.mvs  test_func_body.mvs  test_func_empty.mvs  test_func_resolved_at_end.mvs  test_if_else_multiple.mvs  test_if_else_simple.mvs  test_if_simple.mvs  test_lambda_empty.mvs  test_lambda_stress_test.mvs  test_lambda_typename_array_args.mvs  test_lambda_typename_array_return.mvs  test_lambda_typename_nested_lambdas.mvs  test_lambda_typename_no_args.mvs  test_lambda_typename_no_return.mvs  test_lambda_with_func_call.mvs  test_lambda_with_var.mvs  test_order_add_mul.mvs  test_order_all.mvs  test_return_type_correct_function.mvs  test_var_decl.mvs  test_var_init.mvs
test/test_api_type_init/: test_api_type_init.mvs  test_api_type_init.out  test_api_type_init.sh
test/test_arg_out_of_scope/: test_arg_out_of_scope.mvs  test_arg_out_of_scope.myout  test_arg_out_of_scope.out  test_arg_out_of_scope.sh
test/test_assign_op/: test_assign_op.in  test_assign_op.myout  test_assign_op.out  test_assign_op.sh
test/test_assign_simple/: test_assign_simple.mvs  test_assign_simple.myout  test_assign_simple.sh
test/test_block/: test_block.mvs  test_block.out  test_block.sh
test/test_collapse_cf_else/: test_collapse_cf_else.mvs  test_collapse_cf_else.myout  test_collapse_cf_else.out  test_collapse_cf_else.sh
test/test_collapse_cf_simple/: test_collapse_cf_simple.in  test_collapse_cf_simple.mvs  test_collapse_cf_simple.myout  test_collapse_cf_simple.sh
test/test_collapse_float_cf/: test_collapse_float_cf.mvs  test_collapse_float_cf.myout  test_collapse_float_cf.sh
test/test_collapse_int_cf/: test_collapse_int_cf.mvs  test_collapse_int_cf.myout  test_collapse_int_cf.sh
utils/: config.toml  create_tests  run_tests
(+181 files in other folders)
