cabal-version:      2.4
name:               mvscript
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             João Novo
maintainer:         joaonovo05@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library mvscript-lib
    exposed-modules: Parser, Types, TypeCheck
    hs-source-dirs: lib
    build-depends:    base, parsec, text, containers
    default-language: Haskell2010

executable mvscript
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, parsec, text, containers, mvscript-lib
    hs-source-dirs:   app
    default-language: Haskell2010
