cabal-version:      2.4
name:               mvscript
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             João Novo
maintainer:         joaonovo05@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library mvscript-lib
  exposed-modules:
    Config.ConfigParser
    Config.ConfigTypes
    Config.ConfigValidator
    Config.ConfigHandler
    Context
    Error
    Eval
    FunctionStorage
    Misc
    Parser
    TypeCheck
    Types
    VariableStorage
    PrettyPrint

  hs-source-dirs:   lib
  build-depends:
    , base
    , containers
    , mtl
    , parsec
    , text

  default-language: Haskell2010

executable mvscc
  main-is:          Main.hs

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , containers
    , directory
    , filepath
    , mvscript-lib
    , parsec
    , text

  hs-source-dirs:   app
  default-language: Haskell2010
